// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldAreaFactory Creates a text field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-text"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="inspector-text-control-0"
      >
        First Name
      </label>
      <input
        aria-describedby="inspector-text-control-0__help"
        className="components-text-control__input"
        id="firstName"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="roy"
      />
    </div>
    <p
      className="components-base-control__help"
      id="inspector-text-control-0__help"
    >
      your first name
    </p>
  </div>
</div>
`;

exports[`fieldAreaFactory Creates an select field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control caldera-field caldera-field-select"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="inspector-select-control-0"
      >
        Select Field Label
      </label>
      <select
        aria-describedby="inspector-select-control-0__help"
        className="components-select-control__input"
        id="selectFieldId"
        multiple={false}
        onChange={[Function]}
        value={1}
      >
        <option
          value={0}
        >
          Zero
        </option>
        <option
          value={1}
        >
          One
        </option>
        <option
          value={2}
        >
          Two
        </option>
      </select>
    </div>
    <p
      className="components-base-control__help"
      id="inspector-select-control-0__help"
    >
      Select field description
    </p>
  </div>
</div>
`;

exports[`fieldAreaFactory Should create an autocomplete field 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="autoComplete1"
      >
        Options
      </label>
      <div
        className="components-form-token-field"
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        tabIndex="-1"
      >
        <label
          className="components-form-token-field__label"
          htmlFor="components-form-token-input-0"
        >
          Add item
        </label>
        <div
          className="caldera-field caldera-field-autocomplete components-form-token-field__input-container"
          onMouseDown={[Function]}
          onTouchStart={[Function]}
          tabIndex="-1"
        >
          <span
            className="components-form-token-field__token"
          >
            <span
              className="components-form-token-field__token-text"
              id="components-form-token-field__token-text-0"
            >
              <span
                className="screen-reader-text"
              >
                One (1 of 2)
              </span>
              <span
                aria-hidden="true"
              >
                One
              </span>
            </span>
            <button
              aria-describedby="components-form-token-field__token-text-0"
              aria-label="Remove item"
              className="components-button components-icon-button components-form-token-field__remove-token"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="dashicon dashicons-dismiss"
                focusable="false"
                height={20}
                role="img"
                viewBox="0 0 20 20"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
                />
              </svg>
            </button>
          </span>
          <span
            className="components-form-token-field__token"
          >
            <span
              className="components-form-token-field__token-text"
              id="components-form-token-field__token-text-1"
            >
              <span
                className="screen-reader-text"
              >
                Three (2 of 2)
              </span>
              <span
                aria-hidden="true"
              >
                Three
              </span>
            </span>
            <button
              aria-describedby="components-form-token-field__token-text-1"
              aria-label="Remove item"
              className="components-button components-icon-button components-form-token-field__remove-token"
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              type="button"
            >
              <svg
                aria-hidden="true"
                className="dashicon dashicons-dismiss"
                focusable="false"
                height={20}
                role="img"
                viewBox="0 0 20 20"
                width={20}
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 2c4.42 0 8 3.58 8 8s-3.58 8-8 8-8-3.58-8-8 3.58-8 8-8zm5 11l-3-3 3-3-2-2-3 3-3-3-2 2 3 3-3 3 2 2 3-3 3 3z"
                />
              </svg>
            </button>
          </span>
          <input
            aria-autocomplete="list"
            aria-describedby="components-form-token-suggestions-howto-0"
            aria-expanded={false}
            className="components-form-token-field__input"
            disabled={false}
            id="components-form-token-input-0"
            onBlur={[Function]}
            onChange={[Function]}
            role="combobox"
            size={1}
            type="text"
            value=""
          />
        </div>
        <div
          className="screen-reader-text"
          id="components-form-token-suggestions-howto-0"
        >
          Separate with commas
        </div>
      </div>
    </div>
    <p
      className="components-base-control__help"
      id="autoComplete1__help"
    >
      Help text
    </p>
  </div>
</div>
`;

exports[`fieldAreaFactory should create textarea 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="inspector-textarea-control-0"
      >
        Your message
      </label>
      <textarea
        aria-describedby="inspector-textarea-control-0__help"
        className="components-textarea-control__input"
        cols={8}
        id="textArea1"
        maxLength={500}
        minlength={10}
        onBlur={[Function]}
        onChange={[Function]}
        required={true}
        rows={5}
        value="The content of text area"
      />
    </div>
    <p
      className="components-base-control__help"
      id="inspector-textarea-control-0__help"
    >
      your first name
    </p>
  </div>
</div>
`;

exports[`fieldAreaFactory should create toggle 1`] = `
<div
  className="caldera-field-wrapper caldera-field-wrapper-text"
>
  <div
    className="components-base-control"
  >
    <div
      className="components-base-control__field"
    >
      <label
        className="components-base-control__label"
        htmlFor="toggleFieldLabel"
      >
        Toggle Label
      </label>
      <div
        className="components-base-control components-toggle-control"
      >
        <div
          className="components-base-control__field"
        >
          <span
            className="components-form-toggle is-checked"
          >
            <input
              checked={true}
              className="components-form-toggle__input"
              id="inspector-toggle-control-0"
              onChange={[Function]}
              type="checkbox"
            />
            <span
              className="components-form-toggle__track"
            />
            <span
              className="components-form-toggle__thumb"
            />
            <svg
              aria-hidden="true"
              className="components-form-toggle__on"
              focusable="false"
              height="6"
              role="img"
              viewBox="0 0 2 6"
              width="2"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h2v6H0z"
              />
            </svg>
          </span>
          <label
            className="components-toggle-control__label"
            htmlFor="inspector-toggle-control-0"
          />
        </div>
      </div>
    </div>
    <p
      className="components-base-control__help"
      id="toggleFieldLabel__help"
    >
      Toggle field description
    </p>
  </div>
</div>
`;
